# Processing-visualizer

python-visualizer/: README.md  SpectrumVisualizer.spec  build.py  config.yaml  pyproject.toml  requirements.txt  run.py  spectrum_visualizer.spec
python-visualizer/docs/: DESIGN.md  MODE_COMPARISON.md  STRUCTURE.md
python-visualizer/presets/: Aggressive Metal.yaml  Auto.yaml  Balanced.yaml  Chill Lofi.yaml  Punchy EDM.yaml  Smooth Ambient.yaml
python-visualizer/src/spectrum_visualizer/: __init__.py  __main__.py  app.py
python-visualizer/src/spectrum_visualizer/audio/: __init__.py  analysis.py  capture.py  devices.py  loopback.py
python-visualizer/src/spectrum_visualizer/config/: __init__.py  cli.py  persistence.py  settings.py
python-visualizer/src/spectrum_visualizer/ui/: __init__.py  menu.py  window.py
python-visualizer/src/spectrum_visualizer/visualization/: __init__.py  base.py  legacy.py  modern.py  particles.py
